<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>ControlUnboxingWizard</class>
 <widget class="QWidget" name="ControlUnboxingWizard">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>674</width>
    <height>750</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QGridLayout" name="gridLayout_2">
   <item row="0" column="1">
    <spacer name="verticalSpacer_2">
     <property name="orientation">
      <enum>Qt::Orientation::Vertical</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>20</width>
       <height>299</height>
      </size>
     </property>
    </spacer>
   </item>
   <item row="1" column="0">
    <spacer name="horizontalSpacer">
     <property name="orientation">
      <enum>Qt::Orientation::Horizontal</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>235</width>
       <height>20</height>
      </size>
     </property>
    </spacer>
   </item>
   <item row="1" column="1">
    <layout class="QGridLayout" name="gridLayout">
     <item row="2" column="1">
      <widget class="QLabel" name="labelAllDone">
       <property name="text">
        <string>All done</string>
       </property>
      </widget>
     </item>
     <item row="2" column="0">
      <widget class="LightWidget" name="lightWidgetAllDone" native="true">
       <property name="minimumSize">
        <size>
         <width>24</width>
         <height>24</height>
        </size>
       </property>
      </widget>
     </item>
     <item row="0" column="0">
      <widget class="LightWidget" name="lightWidgetDelivered" native="true">
       <property name="minimumSize">
        <size>
         <width>24</width>
         <height>24</height>
        </size>
       </property>
      </widget>
     </item>
     <item row="1" column="1">
      <widget class="QLabel" name="labelPaired">
       <property name="text">
        <string>Paired</string>
       </property>
      </widget>
     </item>
     <item row="1" column="0">
      <widget class="LightWidget" name="lightWidgetPaired" native="true">
       <property name="minimumSize">
        <size>
         <width>24</width>
         <height>24</height>
        </size>
       </property>
      </widget>
     </item>
     <item row="0" column="1">
      <widget class="QLabel" name="labelDelivered">
       <property name="text">
        <string>Delivered</string>
       </property>
      </widget>
     </item>
     <item row="0" column="3">
      <widget class="IdenticonLabel" name="labelControlName" native="true">
       <property name="text" stdset="0">
        <string>Control name</string>
       </property>
      </widget>
     </item>
     <item row="0" column="2">
      <widget class="IdenticonLabel" name="widgetDeliveredIdenticon" native="true">
       <property name="minimumSize">
        <size>
         <width>24</width>
         <height>24</height>
        </size>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item row="1" column="2">
    <spacer name="horizontalSpacer_2">
     <property name="orientation">
      <enum>Qt::Orientation::Horizontal</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>234</width>
       <height>20</height>
      </size>
     </property>
    </spacer>
   </item>
   <item row="2" column="1">
    <widget class="QPushButton" name="pushButtonNextStep">
     <property name="text">
      <string>UNBOX</string>
     </property>
    </widget>
   </item>
   <item row="3" column="1">
    <spacer name="verticalSpacer">
     <property name="orientation">
      <enum>Qt::Orientation::Vertical</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>20</width>
       <height>298</height>
      </size>
     </property>
    </spacer>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>LightWidget</class>
   <extends>QWidget</extends>
   <header location="global">components/LightWidget.hpp</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>IdenticonLabel</class>
   <extends>QWidget</extends>
   <header location="global">identity/IdenticonLabel.hpp</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections>
  <connection>
   <sender>pushButtonNextStep</sender>
   <signal>clicked()</signal>
   <receiver>ControlUnboxingWizard</receiver>
   <slot>nextStageClicked()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>337</x>
     <y>421</y>
    </hint>
    <hint type="destinationlabel">
     <x>336</x>
     <y>374</y>
    </hint>
   </hints>
  </connection>
 </connections>
 <slots>
  <slot>nextStageClicked()</slot>
 </slots>
</ui>
